css/style.css
#app{
  height: 100%;
  width: 100%;
}

.spin-title{
  font-family: "Poppins", sans-serif;
  font-weight: 800;
  font-size: 3vw;
  line-height: 1!important;
  margin: 0!important;
}

.title {
  font-family: "Poppins", sans-serif;
  position: relative;
  font-weight: 800;
  font-size: 10vw;
  /* text-transform: capitalize; */
  color: transparent;
  /* -webkit-text-stroke: 3px #ffffff; */
  line-height: 1!important;
  letter-spacing: -3px;
}

.title::before {
  content: attr(data-fill-text);
  position: absolute;
  width: 100%;
  height: 100%;
  color: rgba(255,255,255,0.2);
  -webkit-text-stroke: 0px transparent;
  /* border-right: 2px solid white; */
  overflow: hidden;
  animation: animate-text 2s linear;
}

@keyframes animate-text{
  0%
  {
    width: 0;
  }
  100%
  {
    width: 100%;
  }
}

input:focus, select:focus{
  outline: none;
}

input,select{
  border: none;
  height: 60%;
}


input:focus::placeholder {
  color: transparent;
}

.header {
  position:relative;
  text-align:center;
  background: linear-gradient(60deg, rgba(252,70,107,1) 0%, rgba(63,94,251,1) 100%);
  color:white;
}

.inner-header {
  height:65vh;
  width:100%;
}

.flex { /*Flexbox for containers*/
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
}

.waves {
  position:relative;
  width: 100%;
  height:15vh;
  margin-bottom:-7px; /*Fix for safari gap*/
  min-height:100px;
  max-height:150px;
}

.content {
  position:relative;
  height:20vh;
  text-align:center;
  background-color: white;
}

.select select{
  height: 5.7vh;
}

/* Animation */

.parallax > use {
  animation: move-forever 25s cubic-bezier(.55,.5,.45,.5)     infinite;
}
.parallax > use:nth-child(1) {
  animation-delay: -2s;
  animation-duration: 7s;
}
.parallax > use:nth-child(2) {
  animation-delay: -3s;
  animation-duration: 10s;
}
.parallax > use:nth-child(3) {
  animation-delay: -4s;
  animation-duration: 13s;
}
.parallax > use:nth-child(4) {
  animation-delay: -5s;
  animation-duration: 20s;
}
@keyframes move-forever {
  0% {
   transform: translate3d(-90px,0,0);
  }
  100% { 
    transform: translate3d(85px,0,0);
  }
}
/*Shrinking for mobile*/
@media (max-width: 768px) {
  .waves {
    height:40px;
    min-height:40px;
  }
  .content {
    height:30vh;
  }
  h1 {
    font-size:24px;
  }
  .details{
    width: 100%!important;
    overflow-x: hidden;
  }

  .exit{
    top: 5vh;
    right: 10vw;
  }
  
}

.empty, .start{
  min-height: 400px;
}

.result-text{
  font-family: "Poppins", sans-serif;
  font-weight: 800;
}

.my-card{
  min-height: 300px;
  /* background-color: white; */
  background-color: white;
  -webkit-transition: all 1s ease-out;
  -moz-transition: all 1s ease-out;
  -o-transition: all 1s ease-out;
  -ms-transition: all 1s ease-out;
  transition: all 1s ease-out;
}

.max-height-15{
  max-height: 15vh;
}

.info h2, .info span{
  display: -webkit-box;
  overflow: hidden;
  -webkit-line-clamp: 3;
  -webkit-box-orient: vertical;
}

.col .my-card:hover {
  transform: scale(1.20);
  -webkit-transition: all 1s ease;
  -moz-transition: all 1s ease;
  -o-transition: all 1s ease;
  -ms-transition: all 1s ease;
  transition: all 1s ease;
  cursor: pointer;
  background-color: #fafafa;
}

.details{
  padding: 4vh 0;
  display: block;
  overflow: hidden;
  position: fixed;
  left: 0;
  top: 0;
  width: calc(100vw - 17px);
  height: 100%;
  z-index: 10000;
  background: linear-gradient(60deg, rgba(252,70,107,.95) 0%, rgba(63,94,251,.95) 100%);
  color: #fff;
  text-align: left;
}

.my-thumb{
  max-width: 100vw;
  max-height: 28vh;

}

.exit{
  top: 3vh;
  right: 3vw;
  height: 40px;
  width: 40px;
  background-color: white;
  cursor: pointer;
  font-size: 20px;
  line-height: 20px;
  color: black;
}

.my-btn{
  height: 60px;
  width: 60px;
  background-color: white;
  cursor: pointer;
  font-size: 32px;
  line-height: 32px;
  -webkit-transition: all 0.5s ease-out;
  -moz-transition: all 0.5s ease-out;
  -o-transition: all 0.5s ease-out;
  -ms-transition: all 0.5s ease-out;
  transition: all 0.5s ease-out;
}

.my-btn:hover{
  transform: scale(1.2);
  -webkit-transition: all 0.5s ease;
  -moz-transition: all 0.5s ease;
  -o-transition: all 0.5s ease;
  -ms-transition: all 0.5s ease;
  transition: all 0.5s ease;
  background-color: #fafafa;
}

footer{
  color: white;
  background-color: #2b2b2b;
  height: 50px;
}


/* Dark Mode */

.switch {
  position: relative;
  display: inline-block;
  width: 60px;
  height: 34px;
}

/* Hide default HTML checkbox */
.switch input {
  opacity: 0;
  width: 0;
  height: 0;
}

/* The slider */
.slider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: #ccc;
  -webkit-transition: .4s;
  transition: .4s;
}

.slider:before {
  position: absolute;
  content: "";
  height: 26px;
  width: 26px;
  left: 4px;
  bottom: 4px;
  background-color: white;
  -webkit-transition: .4s;
  transition: .4s;
}

input:checked + .slider {
  background-color: #2b2b2b;
}

input:focus + .slider {
  box-shadow: 0 0 1px #2b2b2b;
}

input:checked + .slider:before {
  -webkit-transform: translateX(26px);
  -ms-transform: translateX(26px);
  transform: translateX(26px);
}

/* Rounded sliders */
.slider.round {
  border-radius: 34px;
}

.slider.round:before {
  border-radius: 50%;
}

.dark{
  background-color: #141414;
}

.dark-title::before{
  color: rgba(0,0,0,0.4);
}

.light-black{
  background-color: #1c1c1c;
}

.col .light-black:hover, .nav .light-black:hover {
  background-color: #474747;
}


/* Loading */
.loading button {
  height: 40px;
  width: 40px;
  background: rgba(0, 0, 0, 0.2);
  border-radius: 50%;
  border: 2px solid rgba(0, 0, 0, 0.4);
  border-top-color: #fff;
  animation: spinner2 600ms linear infinite;
  }
  @keyframes spinner2 {
  to {
  transform: rotate(360deg);
  }
  }

